--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,58 @@ next-env.d.ts
 # その他
 *.log
 uv.lock
+
+# Python関連
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDE関連
+.idea/
+.vscode/
+*.swp
+*.swo
+.project
+.classpath
+.settings/
+
+# 環境変数
+.env
+.env.development
+.env.test
+.env.production
+
+# キャッシュ
+.cache/
+.pytest_cache/
+.mypy_cache/
+
+# データベース
+*.sqlite
+*.db
+
+# ログ
+logs/
+*.log.*
+
+# OS関連
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
